--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -20,6 +21,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-buttons": "^1.0.0",
     "vite": "^5.0.8"
   }
 }
