--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "vue": "^3.3.11",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
